maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:54: error: Pattern variables must start with a lower-case letter. (SLS 8.1.1.)
    case TOP:
            ^ShortestPathMaze:54: error: '=>' expected but ':' found.
    case TOP:
            ^ShortestPathMaze:58: error: Pattern variables must start with a lower-case letter. (SLS 8.1.1.)
    case BOTTOM:
               ^ShortestPathMaze:58: error: '=>' expected but ':' found.
    case BOTTOM:
               ^ShortestPathMaze:62: error: Pattern variables must start with a lower-case letter. (SLS 8.1.1.)
    case RIGHT:
              ^ShortestPathMaze:62: error: '=>' expected but ':' found.
    case RIGHT:
              ^ShortestPathMaze:66: error: Pattern variables must start with a lower-case letter. (SLS 8.1.1.)
    case LEFT:
             ^ShortestPathMaze:66: error: '=>' expected but ':' found.
    case LEFT:
             ^